# gfx_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gfx_template.code-workspace  main.cpp  opengl_template.code-workspace  vcpkg-configuration.json  vcpkg.json
cmake/: ConfigureLibraries.cmake  ConfigureSettings.cmake
examples/hello_window/: CMakeLists.txt  hello_window.cpp
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/opengl_cuda_interop/: CMakeLists.txt  kernel.cppm  kernel.cu  kernel.h  opengl_cuda_interop.cpp
examples/window_manager/: CMakeLists.txt  single_window_multi_canvas.cpp
modules/gfx_canvas/: CMakeLists.txt  gfx_canvas.cppm  opengl_canvas.hpp
modules/gfx_context/: CMakeLists.txt  gfx_context.cppm  gfx_context_manager.cppm  gfx_types.hpp  opengl_window_context.hpp
modules/gfx_window_manager/: CMakeLists.txt  gfx_window_manager.cppm  opengl_window_manager.hpp
modules/types/: CMakeLists.txt  exceptions_types.hpp  fundamental_types.hpp  gfx_types.hpp  types.cppm
